--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -3,26 +3,26 @@
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Modificar producto</h1>
     <section class="container">
-        <form action="/productos/<%= product.id %>?_method=PUT" class="product-edit" method="POST" class="product-edit">
+        <form action="/productos/<%= product.id %>?_method=PUT" class="product-edit" method="POST" class="product-edit" enctype="multipart/form-data">
             <div class="info">
                 <label for="name">Nombre del Artista: </label>
-                <input type="text" name="name" id="name" required value="<%= product.artist %>">
+                <input type="text" name="name" id="name" required value="<%= product.artist %>" required>
             </div>
             <div class="info">
                 <label for="album">Nombre del Album: </label>
-                <input type="text" name="album" id="album" required value="<%= product.name %>">
+                <input type="text" name="album" id="album" required value="<%= product.name %>" required>
             </div>
             <div class="info">
                 <label for="genre">Genero: </label>
-                <input type="text" name="genre" id="genre" value="<%= product.genre %>">
+                <input type="text" name="genre" id="genre" value="<%= product.genre %>" required>
             </div>
             <div class="info">
                 <label for="year">Año de lanzamiento: </label>
-                <input type="number" name="year" id="year"  value="<%= product.year %>">
+                <input type="number" name="year" id="year"  value="<%= product.year %>" required>
             </div>
             <div class="info">
                 <label for="price">Precio: </label>
-                <input type="number" name="price" id="price"  value="<%= product.price %>">
+                <input type="number" name="price" id="price"  value="<%= product.price %>" required>
             </div>
             <div class="info">
                 <label for="description">Descripción: </label>
@@ -32,12 +32,11 @@
             <div class="info">
                 <label for="image">Imagen Actual: </label>
                 <img id="<%= product.IDImage %>" src="/images/<%= product.image %>" width="40%">
-                <input type="file" name="image" id="image">
+                <input type="file" name="image" id="image" value="<%= product.image %>" required>
             </div>
             <div class="info">
-                <label for="color" id="color-selector">Color predominante del album (o color parecido)</label>
-                
-                <select name="color-album" id="color-album">
+                <label for="color" id="color-selector">Color predominante del album : </label>
+                <select name="color" id="color-album">
                   <option value="black" <%= product.IDContainer == 'black' ? 'selected' : '' %> >Negro</option>
                   <option value="yellow"  <%= product.IDContainer == 'yellow' ? 'selected' : '' %> >Amarillo</option>
                   <option value="green velvet" <%= product.IDContainer == 'strongGreen' ? 'selected' : '' %> >Verde</option>
@@ -45,17 +44,16 @@
                   <option value="brown" <%= product.IDContainer == 'brown' ? 'selected' : '' %> >Cafe</option>
                   <option value="blue" <%= product.IDContainer == 'blue' ? 'selected' : '' %> >Azul</option>
                 </select>
-                
-                <!-- <img class="eliminar" src="/icons/eliminar.svg" alt="" /> -->
               </div>
             <div class="info">
-                <label>Canciones </label>
+                <label>Canciones:</label>
                 <% for(let i = 0; i < product.songs.length; i++) { %>
                 <div class="songs">
+                    <br>
                     <label for="songs">Titulo de canción <%= i + 1 %>: </label>
-                    <input type="text" name="songs" id="songs" value="<%= product.songs[i].title %>">
-                    <label for="lenght">Duracion: </label>
-                    <input type="text" name="lenght" id="lenght" value="<%= product.songs[i].length %>" >
+                    <input type="text" name="song<%= i + 1 %>" id="songs" value="<%= product.songs[i].title %>">
+                    <label for="lenght">Duración: </label>
+                    <input type="text" name="lenght<%= i + 1 %>" id="lenght" value="<%= product.songs[i].lenght %>" >
                 </div>
                 <% } %>
             </div>
@@ -67,38 +65,3 @@
     </section>
     <%- include('../partials/footer') %>
 </body>
-
-<!--
-<section class="container">
-    <form action="/productos/<%= product.id %>?_method=PUT" class="product-edit" method="POST">
-        <div class="info">
-            <label for="name">Nombre: </label>
-            <input type="text" name="name" id="name" required value="  <%= product.name %>">
-        </div>
-        <div class="info">
-            <label for="artist">Artista: </label>
-            <input type="text" name="artist" id="artist" value=" <%= product.artist %>">
-        </div>
-        <div class="info">
-            <label for="genero">Genero: </label>
-            <input type="text" name="category" id="category" required value=" <%= product.genre%>">
-        </div>
-        <div class="info">
-            <label for="description">Descripción: </label>
-            <textarea name="description" id="description" cols="20" rows="5" required>
-                <%= product.description %>
-            </textarea>
-        </div>
-        <div class="info">
-            <label for="price">Precio: </label>
-            <input type="number" name="price" id="price" value="<%=product.price %>">
-        </div>
-        <div class="info">
-            <label for="image">Imagen: </label>
-            <img id="<%= product.IDImage %>" src="/images/<%= product.image %>" alt="Imágen de Album" width="200px">
-        </div>
-        <button type="submit" id="submit-product">Modificar</button>
-    </form>
-</section>
-
--->
