--- a/src/public/css/stylesProducts.css
+++ b/src/public/css/stylesProducts.css
@@ -30,6 +30,26 @@ body {
     max-width: 300px;
 }
 
+.deletion-section {
+    font-size: 18px;
+    background-color: rgb(218, 50, 108);
+    width: 100%;
+    height: 40px;
+}
+
+#principal-title-deletion {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 18px;
+    color: #ffffff;
+    text-align: center;
+    height: 100%;
+    margin: auto;
+    padding: 10px 0 0 0 ;
+    text-transform: uppercase; 
+    max-width: 300px;
+}
+
 .album-home {
     margin: 10px;
     font-family: 'Roboto', sans-serif;
@@ -178,7 +198,7 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     font-style: italic;
-    color: rgb(95, 95, 95);
+    color: rgb(0, 0, 0);
 }
 
 .album-home #standardImage {
