--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -13,6 +13,10 @@ body {
     height: 690px;
 }
 
+button a {
+    text-decoration: none;
+}
+
 #principal-title {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -51,6 +55,13 @@ body {
     height: 40px;
     width: 140px;
     border: none;
+    transition: all 300ms;
+}
+
+.add-cart:hover {
+    width: 150px;
+    height: 50px;
+    font-size: 17px;
 }
 
 .elements-until-992 {
@@ -77,45 +88,167 @@ body {
     height: 40px;
     width: 140px;
     border: none;
+    transition: all 300ms;
+}
+
+.Right-Scroll:hover {
+    width: 150px;
+    height: 50px;
+    font-size: 17px;
 }
 
 .album-home {
     margin: 10px;
     font-family: 'Roboto', sans-serif;
     padding: 10px;
+    transition: all 300ms;
 }
 
-.album-home p {
+.album-home:hover {
+    margin: 0;
+}
+
+.album-home#black {
+    background-color: gray;
+    color: black
+}
+
+
+.album-home#black p {
     color: white;
-    font-weight: 100;
+    font-weight: 300;
     font-size: 18px;
     text-align: left;
-    padding: 0 5px 20px 5px;
+    padding: 0 7px 20px 7px;
 }
 
-.album-home#house {
-    background-color: gray;
+.album-home#black a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
 }
 
-.album-home #strictly {
-    width: 100%;
-    height: 50%;
+.album-home#yellow {
+    background-color: rgb(255, 227, 65);
+    color: black;
 }
 
-.album-home#rock {
-    background-color: yellow;
+.album-home#yellow p {
+    color: black;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
 }
 
-.album-home #beatles {
-    width: 100%;
-    height: 50%;
+.album-home#yellow a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
 }
 
-.album-home#techno {
+.album-home#strongGreen {
     background-color: green;
+    color: white;
 }
 
-.album-home #underground {
+.album-home#strongGreen p {
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#strongGreen a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: white;
+}
+
+.album-home#red {
+    background-color: rgb(242, 85, 85);
+    color: white; 
+}
+
+
+.album-home#red p {
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#red a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: white;
+}
+
+.album-home#brown {
+    background-color: rgb(181, 108, 69);;
+    color: white;
+}
+
+.album-home#brown p {
+    color: rgb(240, 240, 240);
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#brown a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: black
+}
+
+.album-home#blue {
+    background-color: rgb(59, 57, 187);
+    color: rgb(0, 0, 0);
+}
+
+.album-home#blue p {
+    color: white;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 7px 20px 7px;
+}
+
+.album-home#blue a {
+    display: block;
+    text-align: right;
+    margin: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-style: italic;
+    color: rgb(0, 0, 0);
+}
+
+.album-home #standardImage {
     width: 100%;
     height: 50%;
 }
@@ -125,16 +258,6 @@ h2 {
     font-size: 20px;
     text-align: center;
     text-transform: uppercase;
-}
-
-.album-home a {
-    display: block;
-    text-align: right;
-    margin: 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-style: italic;
-    color: black
 }
 
 @media (min-width: 576px) {
@@ -203,16 +326,31 @@ h2 {
     .Right-Scroll-until-768#element1 {
         position: relative;
         right: 50px;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-768#element1:hover {
+        right: 80px;
     }
 
     .Right-Scroll-until-768#element2 {
         position: relative;
         right: 30px;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-768#element2:hover {
+        right: 60px;
     }
 
     .Right-Scroll-until-768#element3 {
         position: relative;
         right: 10px;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-768#element3:hover {
+        right: 40px;
     }
 
     .first-section .elements {
@@ -222,7 +360,12 @@ h2 {
     .add-cart {
         height: 30px;
         width: 140px;
+    }
 
+    .add-cart:hover {
+        height: 35px;
+        width: 145px;
+        font-size: 16px;
     }
 
     .album-section {
@@ -243,20 +386,34 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
-    .album-home#house {
+    .album-home#black {
         width: 47%;
         height: 50%;
     }
 
-    .album-home#rock {
+    .album-home#yellow {
         width: 47%;
         height: 50%;
     }
 
-    .album-home#techno {
+    .album-home#strongGreen {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#red {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#brown {
+        width: 47%;
+        height: 50%;
+    }
+
+    .album-home#blue {
         width: 47%;
         height: 50%;
     }
@@ -342,19 +499,40 @@ h2 {
         border: none;
     }
 
+    .add-cart:hover {
+        height: 30px;
+        width: 142px;
+        font-size: 14px;
+    }
+
     .Right-Scroll-until-992#element1 {
         position: relative;
         right: 60px;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-992#element1:hover {
+        right: 90px;
     }
 
     .Right-Scroll-until-992#element2 {
         position: relative;
         right: 30px;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-992#element2:hover {
+        right: 60px;    
     }
 
     .Right-Scroll-until-992#element3 {
         position: relative;
         right: 0;
+        transition: all 300ms;
+    }
+
+    .Right-Scroll-until-992#element3:hover {
+        right: 30px;
     }
 
     .album-section {
@@ -378,15 +556,27 @@ h2 {
         color: black
     }
 
-    .album-home#house {
+    .album-home#black {
         width: 30%;
     }
 
-    .album-home#rock {
+    .album-home#yellow {
         width: 30%;
     }
 
-    .album-home#techno {
+    .album-home#strongGreen {
+        width: 30%;
+    }
+
+    .album-home#red {
+        width: 30%;
+    }
+
+    .album-home#brown {
+        width: 30%;
+    }
+
+    .album-home#blue {
         width: 30%;
     }
 
@@ -428,9 +618,19 @@ h2 {
         font-size: 16px;
     }
 
+    .add-cart:hover {
+        height: 45px;
+        width: 145px;
+        font-size: 17px;
+    }
+
     .Right-Scroll-until-992#element1 {
         position: relative;
         right: 40px;
+    }
+
+    .Right-Scroll-until-992#element1:hover {
+        right: 70px;
     }
 
     .Right-Scroll-until-992#element2 {
@@ -438,9 +638,17 @@ h2 {
         right: 0px;
     }
 
+    .Right-Scroll-until-992#element2:hover {
+        right: 30px;
+    }
+
     .Right-Scroll-until-992#element3 {
         position: relative;
         right: -40px;
+    }
+
+    .Right-Scroll-until-992#element3:hover {
+        right: -10px;
     }
 
     .album-section {
@@ -466,7 +674,6 @@ h2 {
         text-decoration: none;
         text-transform: uppercase;
         font-style: italic;
-        color: black
     }
 
 }
