--- a/src/public/css/stylesDetail.css
+++ b/src/public/css/stylesDetail.css
@@ -40,7 +40,6 @@
 }
 
 .banner-fondo-img {
-  background-image: url("../images/greenvelvet.jpg");
   transform: scale(1.2);
   background-position: center;
   position: absolute;
@@ -108,6 +107,48 @@ h2 .banner-artistName a{
   margin: 6px 0 24px;
 }
 
+.creation {
+  padding: 0;
+  font-size: 18px;
+  background-color: rgb(61, 208, 102);
+  width: 100%;
+  height: 40px;
+}
+
+#principal-title-creation {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 18px;
+  color: #ffffff;
+  text-align: center;
+  height: 100%;
+  margin: auto;
+  padding: 10px 0 0 0 ;
+  text-transform: uppercase; 
+  max-width: 300px;
+}
+
+.edition {
+  padding: 0;
+  font-size: 18px;
+  background-color: rgb(73, 89, 206);
+  width: 100%;
+  height: 40px;
+}
+
+#principal-title-edition {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 18px;
+  color: #ffffff;
+  text-align: center;
+  height: 100%;
+  margin: auto;
+  padding: 10px 0 0 0 ;
+  text-transform: uppercase; 
+  max-width: 300px;
+}
+
 .agregar {
   display: flex;
   justify-content: space-evenly;
@@ -140,6 +181,30 @@ h2 .banner-artistName a{
   /* color: white; */
 }
 
+.editar {
+  text-align: center;
+  width: 30%;
+  margin: 0 auto 40px;
+
+}
+
+.editar button{
+  border-radius: 20px;
+  background-color: #4b51ed;
+  width: 110px;
+}
+
+.editar button:hover{
+  background-color: #15199d;
+  /* color: white; */
+}
+
+.editar button a {
+  text-decoration: none;
+  color:rgb(223, 223, 223);
+}
+
+
 button {
   width: 80%;
   height: 100%;
@@ -169,8 +234,15 @@ button {
   width: 80%;
   height: 40px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+}
+
+.numero{
+  margin-left: 50px;
+}
+.duracion{
+  margin-right: 50px;
 }
 
 
