--- a/src/src/views/products/index.ejs
+++ b/src/src/views/products/index.ejs
@@ -4,25 +4,20 @@
     <section class="first-section">
         <div id="principal-title">Productos <i class="fas fa-compact-disc"></i></div>
     </section>
+    <% if(locals && locals.deletion) { %>
+        <section class="deletion-section">
+            <div id="principal-title-deletion">Producto Eliminado con Éxito</div>
+        </section>
+    <% } %>
     <section class="album-section">
-        <article class="album-home" id="house">
-            <img id="strictly" src="/images/strictlyrhythm.jpg" alt="Imágen de Album">
-            <h2>Lo mejor de Strictly Rhythm</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
+        <% for(let i = 0; i < products.length; i++) { %>
+        <article class="album-home" id="<%= products[i].IDContainer %>">
+            <img id="<%= products[i].IDImage %>" src="/images/<%= products[i].image %>" alt="Imágen de Album">
+            <h2><%= products[i].title %></h2>
+            <p><%= products[i].description %></p>
+            <a href="/productos/<%= products[i].id %>"><%= products[i].finalMessage %></a>
         </article>
-        <article class="album-home" id="rock">
-            <img id="beatles" src="/images/pleasepleaseme.jpg" alt="Imágen de Album">
-            <h2>El inicio de una gran historia</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
-        </article>
-        <article class="album-home" id="techno">
-            <img id="underground" src="/images/greenvelvet.jpg" alt="Imágen de Album">
-            <h2>Underground para variar</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores accusamus dolor aperiam! Nesciunt blanditiis aliquid explicabo fugit possimus quia esse? Tempora, nemo aspernatur? Sit enim possimus, dolor tempora laboriosam fugiat.</p>
-            <a href="/productos/1">ir a la colección ---></a>
-        </article>
+        <% } %>
     </section>
     <%- include('../partials/footer') %>
 </body>
