--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -6,7 +6,7 @@
         <form action="/productos/<%= product.id %>?_method=PUT" class="product-edit" method="POST" class="product-edit" enctype="multipart/form-data">
             <div class="info">
                 <label for="name">Nombre del Artista: </label>
-                <input type="text" name="name" id="name" required value="<%= product.artist %>" required>
+                <input type="text" name="artist" id="name" required value="<%= product.artist %>" required>
             </div>
             <div class="info">
                 <label for="album">Nombre del Album: </label>
