Registro de Usuario
Se modificaron los modulos de terceros o librerias instaladas al
proyecto, se agrego Bryptjs y Express-validator para los formularios.

Se modifico la vista de register.ejs para que este correcta a los
errores que se lleguen a presentar y además se agregaron los formularios
faltantes para la base de datos JSON por el momento.

Además de la modificación del Ruteador de usuarios para dar tratamiento
a la ruta con sus respectivos Middlewares de Validaciones y de la carga
correcta de la imagen al Servidor con Multer.

Y finalmente los estilos de register.ejs, stylesRegister.css y el método
correspondiente a registerPost.

--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -34,7 +34,7 @@
                 <input type="file" name="image" id="image" required>
             </div>
             <div class="info">
-                <label for="color" id="color-selector">Color predominante del album (o color parecido)</label>
+                <label for="color" id="color-selector">Color predominante del album :</label>
                 <select name="color" id="color-album" required>
                   <option value="black">Negro</option>
                   <option value="yellow">Amarillo</option>
@@ -47,7 +47,7 @@
                 <!-- <img class="eliminar" src="/icons/eliminar.svg" alt="" /> -->
               </div>
             <div class="info">
-                <label>Canciones </label>
+                <label>Canciones :</label>
                 <div class="songs">
                     <label for="songs">Titulo: </label>
                     <input type="text" name="song" id="songs" required>
