--- a/src/src/views/users/register.ejs
+++ b/src/src/views/users/register.ejs
@@ -3,23 +3,36 @@
     <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
     <section id="register-and-text-container">
         <h1>Registro</h1>
-        <form id="register" action="/ruta" method="POST">
+        <form id="register" action="/usuario/<%= newID %>" method="POST" enctype="multipart/form-data">
             <article>
-                <label for="name">Nombre :</label>
-                <input type="text" name="name" id="name" required>
+                <label for="firstName">Nombre(s) :</label>
+                <input type="text" name="firstName" id="firstName" required>
             </article>
             <article>
-                <label for="email">Correo electrónico :</label>
+                <label for="lastName">Apellidos :</label>
+                <input type="text" name="lastName" id="lastName" required>
+            </article>
+            <article>
+                <label for="email">Email :</label>
                 <input type="text" name="email" id="email" required>
             </article>
             <article>
-                <label for="password">Contraseña</label>
+                <label for="password">Contraseña :</label>
                 <input type="password" name="password" id="password" required>
             </article>
             <article>
-                <label for="rewrite-password">Vuelva a escribir la contraseña :</label>
-                <input type="password" name="rewrite-password" id="rewrite-password" required>
+                <label for="rewrited-password">Vuelva a escribir la contraseña :</label>
+                <input type="password" name="rewrited-password" id="rewrited-password" required>
             </article>
+            <article>
+                <label for="image" id="imageLabel">Imagen de perfil : </label>
+                <input type="file" name="image" id="image" accept=".jpg, .png">
+            </article>
+            <% if(locals && locals.errors) { %>
+                <% errors.forEach( error => { %>
+                <p id="error">*<%= error.msg %></p><br>
+                <% }) %> 
+                <% } %>
             <button type="submit" id="submit-button">Registrarse</button>
         </form>
         <p>Al crear la cuenta, acepta las <a href="#" target="_blank">Condiciones de uso</a> y el <br><a href="#" target="_blank">Aviso de Privacidad</a> de BMG Records.</p>
